# windows-win32-hello-rust

./: Cargo.toml
src/: main.rs
