[package]
name = "ds-touch-controls"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.44.0", features = [
    "Graphics_Capture",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_Graphics_Gdi"
] }
